# sarathi

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml
.sdlc/: approvals.yaml  plan.md  process-decisions.yaml  wip.md
checkers/: approvals.py  check_code.py  check_design.py  check_plan.py  check_spec.py  complexity.py  markdown_structure.py  render_workflow_status.py  schemas.py  waves.py
docs/: agent-steered-sdlc.html  approval-gates.md  artifact-contracts.md  artifact-formatting.md  assurance-profiles.md  bootstrap-instructions.md  cleanup-pass.md  critical-review-round-2.md  critical-review-round-3.md  critical-review.md  cross-cutting-concerns.md  document-locations.md  enduring-model.md  feedback-and-learning.md  human-first-artifacts.md  process-maintenance.md  progressive-disclosure.md  project-entry.md  project-quality-gates.md  release-process.md  requirements-model.md  result-reporting.md  review-verification-checklist.md  sarathi-process-diagram-prompt.md  sarathi.html  simplicity-first.md  simplify-pass.md  slug-id-migration.md  srs-authoring.md  test-ownership.md  work-decomposition.md  work-in-progress.md  workflow-status.md
prompts/: code-assess.prompt.md  code-create.prompt.md  code-review.prompt.md  code-verify.prompt.md  design-assess.prompt.md  design-create.prompt.md  design-review.prompt.md  design-verify.prompt.md  plan-assess.prompt.md  plan-create.prompt.md  plan-review.prompt.md  plan-verify.prompt.md  spec-assess.prompt.md  spec-create.prompt.md  spec-review.prompt.md  spec-verify.prompt.md  workflow-status.prompt.md
scripts/: check_update.py  install.ps1  install.sh  pre-commit  verify_release.py
tests/: test_check_code.py  test_checkers.py  test_content_integrity.py  test_design_foundations.py  test_distribution.py  test_enduring_model.py  test_execution_first.py  test_human_first_artifacts.py  test_installers.py  test_instruction_budgets.py  test_plan_foundations.py  test_product_first_status.py  test_render_markdown_html.py  test_render_openapi_examples.py  test_render_workflow_status.py  test_skill_bundle.py  (+4 more)
(+97 files in other folders)
