[project]
name = "sarathi"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pymarkdownlnt>=0.9.38",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "E501", "F", "I"]

[tool.ruff.format]
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["checkers"]

[tool.coverage.report]
show_missing = true
fail_under = 80
