[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "sarathi-sdlc"
version = "0.6.1"
description = "Production software engineering workflows for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
sarathi-sdlc = "sarathi_sdlc.cli:main"

[tool.hatch.build.targets.wheel.force-include]
"CHANGELOG.md" = "src/sarathi_sdlc/_bundle/CHANGELOG.md"
"checkers" = "src/sarathi_sdlc/_bundle/checkers"
"docs" = "src/sarathi_sdlc/_bundle/docs"
"prompts" = "src/sarathi_sdlc/_bundle/prompts"
"scripts" = "src/sarathi_sdlc/_bundle/scripts"
"skills" = "src/sarathi_sdlc/_bundle/skills"

[tool.hatch.build.targets.wheel]
packages = ["src/sarathi_sdlc"]

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGELOG.md",
    "/README.md",
    "/checkers",
    "/docs",
    "/prompts",
    "/scripts",
    "/skills",
    "/src",
    "/tests",
    "/pyproject.toml",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pre-commit>=4.6.0",
    "pymarkdownlnt>=0.9.38",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.20",
    "twine>=6.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "E501", "F", "I"]

[tool.ruff.format]
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["checkers"]

[tool.coverage.report]
show_missing = true
fail_under = 80
